feat: update environment configuration and add Telegram bot settings

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 DATABASE_URL="mysql://root:@localhost:3306/your-db"
 PORT=3000
+NODE_ENV=development
 
 JWT_SECRET="mysecretkey"
 API_SECRET="myapisecret"
@@ -15,3 +16,6 @@ MAIL_FROM="support@email.com"
 RABBITMQ_URL="amqp://guest:guest@localhost:5672/"
 RABBITMQ_QUEUE="queue"
 TIMEZONE_OFFSET="7"
+
+TELEGRAM_BOT_TOKEN=
+TELEGRAM_CHAT_ID=
